# AI-Interview

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Justfile  README.md  TICKET_AUTHENTICATION.md  client.js  docker-compose.yml  index.html  main.py  nginx.conf  pyproject.toml  requirements.txt  server.py  test.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  config.py  entrypoint.sh  main.py  messages.py  processing.py  pyproject.toml  server.py  session.py  sonar-project.properties  test_authentication.py  test_tickets.py  transcription.py  webrtc_handler.py  webrtc_messages.py  websocket_server.py
backend/.basedpyright/: baseline.json
backend/alembic/: env.py
backend/alembic/versions/: 1324e951528d_add_transcription_model.py  38fd106d388e_initial_user_table.py  3b21368eb349_create_initial_user_table.py  489a376045f3_initial.py  8156e810adf4_add_dismissed.py  869cfd49ebd5_initial.py  8d83d99f4b14_initial.py  df22e93c0bbb_initial.py
backend/config/: settings.py
backend/handlers/: webrtc_handler.py
backend/models/: session.py
backend/services/: audio_processor.py  transcription_service.py
backend/src/: eval_ai.py  main.py
backend/src/interview_helper/: config.py  main.py  messages.py  session.py  test_config.py  test_processing.py  test_websocket.py  transcription.py  webrtc_handler.py  websocket_server.py
backend/src/interview_helper/ai_analysis/: ai_analysis.py
backend/src/interview_helper/audio_stream_handler/: audio_utils.py  (+3 more)
backend/test_samples/: transcript1.txt
backend/utils/: ssl_utils.py
(+64 files in other folders)
