[project]
name = "thesisv2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiortc>=1.13.0",
    "numpy>=2.3.1",
    "scipy>=1.16.0",
    "scipy-stubs>=1.16.1.0",
    "streamz>=0.6.4",
    "vosk>=0.3.45",
    "websockets>=15.0.1",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ['**/*venv/**\*']
search-path = [".", ".venv/Lib/site-packages/"]

[dependency-groups]
dev = [
    "pyrefly>=0.26.1",
    "ruff>=0.12.7",
]

[tool]
